pages-content/home/featureScreen/slider/slider.module.scss
@use '../../../../assets/styles/index.scss' as *;

.feature__slider {
  width: 100%;
  margin-top: rem(100);
  @media screen and (max-width: point(sm)) {
    margin-top: rem(60);
  }
}

.slider__slide {
  position: relative;
  display: flex;
  @media screen and (max-width: point(sm)) {
    flex-direction: column;
    padding-top: rem(80);
  }

  &.slide__even {
    @media screen and (min-width: point(sm)) {
      flex-direction: row-reverse;
    }
  }

  > div {
    @media screen and (min-width: point(sm)) {
      flex: 1;
    }
  }

  .slide_image {
    display: flex;
    align-items: center;
  }

  .image__container {
    position: relative;
    width: 100%;
    aspect-ratio: 1/1;

    .image {
      width: 100%;
      position: absolute;
      transform: translate(-50%, -50%);
    }

    .depth {
      position: static !important;
    }
  }

  .slide__content {
    margin-right: rem(44);
    display: flex;
    flex-direction: column;
    align-items: center;
    @media screen and (max-width: point(sm)) {
      margin-right: 0;
    }

    h3 {
      @include font-oxanium-semibold;
      font-size: font(44);
      color: color(light100);
      text-align: center;
      @media screen and (max-width: point(sm)) {
        position: absolute;
        width: 90%;
        top: 0;
        left: 50%;
        transform: translateX(-50%);
        font-size: font(18);
      }
    }

    .content__text {
      position: relative;
      max-width: rem(322);
      margin-top: rem(44);

      p {
        @include font-oxanium-medium;
        font-size: font(18);
        line-height: rem(31);
        text-align: center;

        &:not(:first-child) {
          margin-top: rem(25);
          @media screen and (max-width: point(sm)) {
            margin-top: rem(15);
          }
        }

        @media screen and (max-width: point(sm)) {
          font-size: font(11);
          line-height: rem(22);
        }
      }

      .text__blur {
        position: absolute;
        width: rem(500);
        height: rem(700);
        top: 50%;
        left: 50%;
        transform: translate(-50%, -50%);
        z-index: -1;
        @media screen and (max-width: point(sm)) {
          width: rem(400);
          height: rem(400);
        }

        > span {
          width: 100% !important;
          height: 100% !important;
        }
      }
    }
  }
}

